Some small details.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 </head>
 
 <body>
+  <h1>Arkatinto!</h1>
+  <p>
+  	Por Manuel Cerón (ceronman@gmail.com) <br />
+  	<a href="https://github.com/ceronman/Arkatinto">GitHub project page</a>
+  </p>
   <canvas id="gamecanvas">
     Your browser doesn't support canvas.
   </canvas>
+  <p>
+  	Use las <strong>flechas</strong> para mover la nave.<br/>
+  	Use <strong>espacio</strong> para lanzar la bola y activar poderes.
+  </p>
 </body>
 </html>
