--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </canvas>
   <p>
   	Use las <strong>flechas</strong> para mover la nave.<br/>
-  	Use <strong>espacio</strong> para lanzar la bola y activar poderes.
+  	Use <strong>espacio</strong> para lanzar la bola y activar poderes. <br />
+  	Use <strong>F5</strong> para reiniciar el juego.
   </p>
 </body>
 </html>
