Added dynamic maps.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
   	Use <strong>espacio</strong> para lanzar la bola y activar poderes. <br />
   	Use <strong>F5</strong> para reiniciar el juego.
   </p>
+  <button onclick="loadMap(0)">Level 0</button>
+  <button onclick="loadMap(1)">Level 1</button>
+  <button onclick="loadMap(2)">Level 2</button>
+  <button onclick="loadMap(3)">Level 3</button>
 </body>
 </html>
